@@ -83,7 +83,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
 
     private static final SQLPermission ABORT_PERM = new SQLPermission("abort");
 
-    private static final String JDBC_LOCAL_CHARACTER_SET_RESULTS = "jdbc.local.character_set_results";
+    static final String JDBC_LOCAL_CHARACTER_SET_RESULTS = "jdbc.local.character_set_results";
 
     public String getHost() {
         return this.host;
@@ -1852,13 +1852,9 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                                 throw ex;
                             }
                         }
-                        if (!this.usingCachedConfig) {
-                            this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, null);
-                        }
+                        this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, null);
                     } else {
-                        if (!this.usingCachedConfig) {
-                            this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, onServer);
-                        }
+                        this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, onServer);
                     }
                 } else {
 
@@ -1905,9 +1901,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                             }
                         }
 
-                        if (!this.usingCachedConfig) {
-                            this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, mysqlEncodingName);
-                        }
+                        this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, mysqlEncodingName);
 
                         // We have to set errorMessageEncoding according to new value of charsetResults for server version 5.5 and higher
                         if (versionMeetsMinimum(5, 5, 0)) {
@@ -1915,9 +1909,7 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
                         }
 
                     } else {
-                        if (!this.usingCachedConfig) {
-                            this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, onServer);
-                        }
+                        this.serverVariables.put(JDBC_LOCAL_CHARACTER_SET_RESULTS, onServer);
                     }
                 }
 
@@ -2240,6 +2232,10 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
         this.io = new MysqlIO(newHost, newPort, mergedProps, getSocketFactoryClassName(), getProxy(), getSocketTimeout(),
                 this.largeRowSizeThreshold.getValueAsInt());
         this.io.doHandshake(this.user, this.password, this.database);
+        if (versionMeetsMinimum(5, 5, 0)) {
+            // error messages are returned according to character_set_results which, at this point, is set from the response packet
+            this.errorMessageEncoding = this.io.getEncodingForHandshake();
+        }
     }
 
     private String normalizeHost(String hostname) {
@@ -3353,6 +3349,10 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
             }
         }
 
+        boolean overrideDefaultAutocommit = isAutoCommitNonDefaultOnServer();
+
+        configureClientCharacterSet(false);
+
         try {
             this.errorMessageEncoding = CharsetMapping.getCharacterEncodingForErrorMessages(this);
         } catch (SQLException ex) {
@@ -3362,10 +3362,6 @@ public class ConnectionImpl extends ConnectionPropertiesImpl implements MySQLCon
             sqlEx.initCause(ex);
             throw sqlEx;
         }
-
-        boolean overrideDefaultAutocommit = isAutoCommitNonDefaultOnServer();
-
-        configureClientCharacterSet(false);
 
         if (versionMeetsMinimum(3, 23, 15)) {
             this.transactionsSupported = true;
